<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_front">

    <Button
        android:id="@+id/facilitator"
        android:layout_width="221dp"
        android:layout_height="59dp"
        android:background="#000000"
        android:checkable="false"
        android:clickable="true"
        android:freezesText="false"
        android:text="@string/facilitator"
        android:textColorHighlight="#FFFFFF"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/Shelter"
        android:layout_width="213dp"
        android:layout_height="82dp"
        android:layout_marginTop="100dp"
        android:text="@string/shelter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facilitator" />

    <Button
        android:id="@+id/Admin"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:text="@string/admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Shelter" />

</androidx.constraintlayout.widget.ConstraintLayout>